<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>de.dhbw.rahmlab</groupId>
		<artifactId>DSL4GA__Parent</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>
	<groupId>de.dhbw.rahmlab</groupId>
	<artifactId>DSL4GA_Impl_Truffle</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<skipTests>true</skipTests>
		<graalvm.version>23.1.2</graalvm.version>
		<truffleGenSourceDir>${project.build.directory}/generated-sources/truffle-dsl-processor</truffleGenSourceDir>
	</properties>
	<dependencies>
		<dependency>
			<groupId>de.dhbw.rahmlab</groupId>
			<artifactId>DSL4GA_API</artifactId>
			<version>1.0-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>de.dhbw.rahmlab</groupId>
			<artifactId>DSL4GA_Common</artifactId>
			<version>1.0-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>de.orat.math.gacalc</groupId>
			<artifactId>GACalcAPI</artifactId>
			<version>1.0-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>de.orat.math.cgacasadi</groupId>
			<artifactId>CGACasADi</artifactId>
			<version>1.0-SNAPSHOT</version>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<!-- indirect dependency introduced via ConformalGeometricAlgebra -->
		<dependency>
			<groupId>de.orat.math.ga</groupId>
			<artifactId>GeometricAlgebra</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>de.orat.math.cga</groupId>
			<artifactId>ConformalGeometricAlgebra</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.graalvm.polyglot</groupId>
			<artifactId>polyglot</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-api</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-runtime</artifactId>
			<version>${graalvm.version}</version>
			<scope>runtime</scope>
		</dependency>

	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>17</source>
						<target>17</target>
						<annotationProcessorPaths>
							<path>
								<groupId>org.graalvm.truffle</groupId>
								<artifactId>truffle-dsl-processor</artifactId>
								<version>${graalvm.version}</version>
							</path>
						</annotationProcessorPaths>
						<generatedSourcesDirectory>${truffleGenSourceDir}</generatedSourcesDirectory>
						<compilerArgs>
							<arg>--add-exports</arg>
							<arg>org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>org.graalvm.truffle/com.oracle.truffle.api.exception=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED</arg>
						</compilerArgs>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.graalvm.truffle</groupId>
							<artifactId>truffle-dsl-processor</artifactId>
							<version>${graalvm.version}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
		<finalName>DSL4GA_Impl_Truffle</finalName>
	</build>
</project>
